# Task2_proga_multi

./: .travis.yml  CMakeLists.txt  README.md  libdynamic.c  libdynamic.h  libstatic.c  libstatic.h  main.c
